--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -14,13 +14,13 @@
       <h1 class="mb-3" style="font-family: 'Bookman Old Style'; font-size: 32px; color: rgb(47, 47, 61);">
         Un poco de Historia
       </h1>
-      <h2 class="mb-3">Rey del Pollo</h2>
+      <h2 class="mb-3">Salud Animal</h2>
       <div class="d-flex gap-3">
           <!-- Imagen -->
-          <img src="{% static 'img/german.JPG' %}" alt="Imagen 1" class="img-fluid" style="width: 120px; height: 150px;">
+          <img src="{% static 'img/Salud2.png' %}" alt="Imagen 1" class="img-fluid" style="width: 120px; height: 150px;">
           <!-- Texto -->
           <p>
-              Polleria "Rey del Pollo" esta desde 2023 . La Polleria es del Sr Simek Osiris German...
+              Veterinaria "Salud Animal" esta desde 2023 . La Polleria es del Sr Simek Osiris German...
               La Innovación, crecimiento con de nuestro Trabajo es para generar
               un desarrollo sustentable hacia ofertas de soluciones en Alimentos le permite a nuestro clientes optimizar el vínculo con las demandas, ya sea con el desarrollo familiar,
               un complejo sistema de trabajo y gestión diario.
@@ -31,7 +31,7 @@
       <div class="d-flex gap-3">
         <!-- Texto -->
         <p>
-            Polleria "Rey del Pollo" en Tres Isletas Chaco nace en el año 2003 con la propuesta de generar economía en la canasta familiar de nuestros comerciantes hacia los clientes...
+            Veterinaria"Salud Animal" en Tres Isletas Chaco nace en el año 2003 con la propuesta de generar economía en la canasta familiar de nuestros comerciantes hacia los clientes...
             La Innovación, crecimiento con de nuestro estudio es para generar
         </p>
         
@@ -42,7 +42,7 @@
     <!-- Aside con detalles y mapa -->
     <aside class="col-lg-4 col-md-5 col-sm-12 bg-warning p-4 rounded">
       <h2 class="mb-3 text-dark">Estamos en:</h2>
-      <img src="{% static 'img/reydelpollo.png' %}" alt="Tres Isletas" style="width: 30%; height: auto;" class="img-fluid mb-3">
+      <img src="{% static 'img/Salud1.png' %}" alt="Tres Isletas" style="width: 30%; height: auto;" class="img-fluid mb-3">
 
       <p><strong>Cuil:</strong> 20-XXXXXXXX-X</p>
       <p><strong>Domicilio:</strong> Avda Guemes 123, Tres Isletas, Chaco</p>
