--- a/apps/CarritoApp/templates/tienda.html
+++ b/apps/CarritoApp/templates/tienda.html
@@ -3,12 +3,8 @@
 {% block navegacion %}
 {% include 'navegacion.html' %}
 {% endblock %}
-<!-- 🔹 ok-- de 10 -->
-<!-- 🔹 ok-- de 10 -->
-<!-- 🔹 ok-- de 10 -->
-<!-- 🔹 ok-- de 10 -->
- 
 {% block contenido %}
+
 <div class="container">
 <!-- 🔹 Mostrar mensaje si el usuario NO está autenticado -->
 
@@ -131,19 +127,6 @@
 }
 </style>
 
-
-
-
-
-
-    <!--<div class="row">
-        <div class="col-12 text-center">
-            <h1 class="titulo-grueso text-start texto-estilizado" style="font-size: 1rem;">
-                <strong> E-commerce: Gustavo Caballero - cel 3644-563925  </strong>
-            </h1>
-        </div>
-    </div>-->
-
     <!-- Filtro y Carrito -->
     <div class="row mb-3 d-flex align-items-center">
         <div class="col-12 col-md-8">
@@ -166,6 +149,10 @@
 
 </div>
         <div class="col-12 col-md-4 text-end mt-2 mt-md-0">
+          <a href="{% url 'turnos:paso1_dni' %}" class="text-success text-decoration-none me-2">
+            <i class="bi bi-calendar-check"></i> Turnos
+          </a>
+          
            <a href="{% url 'ver_carrito' %}" class="btn btn-secondary btn-sm position-relative">
                 <i class="bi bi-cart3"></i> Carrito
                 {% if request.session.carrito %}
@@ -176,6 +163,11 @@
             </a>
         </div>
 </div>
+
+<!--<div class="alert alert-info">
+  llega productos_pagina? = {{ productos_pagina|default:"NO LLEGA" }} |
+  count = {{ productos_pagina.paginator.count|default:"-" }}
+</div> -->
 
 
 <!-- Productos: 5 por fila SIEMPRE -->
@@ -237,14 +229,28 @@
             <p class="card-text"><strong>Stock:</strong> {{ producto.stock }}</p>
 
             <a href="{% url 'opiniones:agregar_opinion' producto.id %}" class="btn btn-secondary btn-sm">Consulta</a>
+            
             {% if producto.stock > 0 %}
-              <a href="{% url 'CarritoApp:Add' producto.id %}?next={{ request.get_full_path|urlencode }}"
-                class="btn btn-primary btn-sm">
-                Comprar
-              </a>
+
+              {% if user.is_authenticated %}
+                <a href="{% url 'CarritoApp:Add' producto.id %}?next={{ request.get_full_path|urlencode }}"
+                  class="btn btn-primary btn-sm">
+                  Comprar
+                </a>
+              {% else %}
+                <a href="{% url 'apps.blog_auth:iniciar_sesion' %}?next={{ request.get_full_path|urlencode }}"
+                  class="btn btn-primary btn-sm"
+                  onclick="alert('Tenés que iniciar sesión o registrarte para comprar.');">
+                  Comprar
+                </a>
+              {% endif %}
+
             {% else %}
               <button class="btn btn-outline-danger btn-sm" disabled>Sin stock</button>
             {% endif %}
+
+
+
           </div>
 
         </div>
@@ -252,9 +258,6 @@
     {% endfor %}
   </div>
 </div>
-
-
-
 
 <!-- Navegación de Páginas -->
     <nav aria-label="Page navigation">
@@ -338,11 +341,4 @@
     </div>
   </div>
 </div>
-
-
-
-{% endblock %}
-
-{% block footer %}
-{% include 'footer.html' %}
 {% endblock %}
